# staking-contract

./: Cargo.toml  README.md  package-lock.json
fungible-token-contract/: Cargo.toml
res/: ft_bkrt_contract.wasm  fungible_token.wasm  staking_bkrt_contract.wasm
src/: lib.rs
staking-contract/: Cargo.toml
staking-contract/src/: ft_calls.rs  internals.rs  lib.rs
tests/sim/: tests.rs  utils.rs
