[package]
name = "staking-bkrt-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.6"
near-contract-standards = "4.0.0-pre.6"
unix-ts = "0.2"
# [dev-dependencies]
# near-sdk-sim="4.0.0-pre.7"

# [profile.release]
# codegen-units=24
# opt-level = "z"
# lto = true
# debug = false
# panic = "abort"
# overflow-checks = true
